# poly

./: LICENSE  README.md  poly.cabal  test.txt
src/: Builtins.hs  Elab.hs  ElabUtils.hs  Main.hs  Poly.hs  Src.hs  Utils.hs
src/Elab/: Builtins.hs  Types.hs  Unify.hs  Utils.hs
